--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Stride code test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="/js/app.js" defer></script>
   <link rel="stylesheet" href="/css/style.css"/>
   <head></head>
